<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/room_number" />

            <Spinner
                android:id="@+id/spinnerRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/type" />

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rbFood">

                <RadioButton
                    android:id="@+id/rbFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food" />

                <RadioButton
                    android:id="@+id/rbDrink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drink" />

            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/name" />

            <Spinner
                android:id="@+id/spinnerFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/price" />

            <EditText
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:hint="@string/zero"
                android:textAlignment="textEnd" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/txtQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned"
                android:hint="@string/zero"
                android:textAlignment="textEnd" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/total" />

            <EditText
                android:id="@+id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:hint="@string/zero"
                android:textAlignment="textEnd" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/submit" />

</LinearLayout>